added more docs

--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -24,13 +24,15 @@
 
 <p>Note: Users can only delete their own recipes</p>
 
-<p>Users can delete their own recipes by clicking on "Delete".</p>
+<p>Users can delete their own recipes by clicking on "Delete" in Recipe Index.</p>
 
 <h3>Getting more details about a recipe</h3>
 
-<p>Go the recipe you want and click on "Details"</p>
+<p>Go the recipe you want and click on "Details" in Recipe Index</p>
 
 <h3>Searching a recipe</h3>
+
+<p>Someone can search recipes by clicking on "Search Recieps" in header</p>
 
 <p>You can search by Ingredients or Title</p>
 
@@ -38,13 +40,15 @@
 
 <h3>Recipe Filtering</h3>
 
-<p>When in the recipe index, you can filter by country and meal type.</p>
+<p>The filters can be applied by filling in the country and meal time field. </p>
 
-<p>Also, users can select to see only Verified or User Recipes.</p>
+<p>When in the recipe index, you can filter by country and meal time.</p>
+
+<p>Also, users can select to see only Verified or User Recipes by selecting which option they want.</p>
 
 <h3>Rating Recipe</h3>
 
-<p>Users can only rate a recipe once.</p>
+<p>Users can only rate a recipe once by selecting "Thumbs up or Thumbps down" in Recipe Detail.</p>
 
 <p>Users can rate recipes with thumbs up or down.</p>
 
@@ -57,3 +61,18 @@
 <h3>Bookmarking a recipe</h3>
 
 <p>Users can bookmark a recipe by clicking on "Bookmark Recipe" in Recipe Detail Page.</p>
+
+
+<h2>FAQ</h2>
+
+<h3>Why Can't I create a verified recipe?</h3>
+
+<p>Only admin can create verified recipes</p>
+
+<h3>How do I change Password?</h3>
+
+<p>Go to "UserDashboard" and click on Change Password.</p>
+
+<h3>How do I change Username?</h3>
+
+<p>Go to "UserDashboard" and click on Change Username.</p>
