--- a/CookingCurator/Views/Home/Index.cshtml
+++ b/CookingCurator/Views/Home/Index.cshtml
@@ -62,6 +62,7 @@ else
         </ul>
         <br />
         <p><button> @Html.ActionLink("Learn more about this application", "About", "Home", null, new { @class = "btn btn-default" }) </button></p>
+        
     </div>
     <div class="col-md-4">
         <img src="~/Content/images/CookingCuratorLogo.jpg" />
@@ -71,5 +72,7 @@ else
 
 
     </div>
-
+    <footer>
+        <p class="center-block">SHA-1: 7b32e399c057858c97a91a7ddeb2396bfc948ed6, Deployed Date: 3/10/2019</p>
+    </footer>
 }
