Added new layout for AcceptWaiver and increase width of some input elements and added a check for 50 bookmarks

--- a/CookingCurator/Views/Home/AcceptWaiver.cshtml
+++ b/CookingCurator/Views/Home/AcceptWaiver.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "AcceptWaiver";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AcceptWaiver.cshtml";
 }
 
 @using (Html.BeginForm())
