--- a/CookingCurator/Views/Profile/ContactUs.cshtml
+++ b/CookingCurator/Views/Profile/ContactUs.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.feedBack, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.feedBack, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.feedBack,5, 50, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.feedBack, "", new { @class = "text-danger" })
             </div>
         </div>
