--- a/CookingCurator/Views/Recipe/Create.cshtml
+++ b/CookingCurator/Views/Recipe/Create.cshtml
@@ -26,7 +26,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.instructions, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.instructions, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextAreaFor(model => model.instructions, 5, 50, new { htmlAttributes = new { @class = "form-control"} })
             @Html.ValidationMessageFor(model => model.instructions, "", new { @class = "text-danger" })
         </div>
     </div>
