Added the Set Diets and Set Allergies pages

--- a/CookingCurator/Views/Profile/UserDashboard.cshtml
+++ b/CookingCurator/Views/Profile/UserDashboard.cshtml
@@ -17,11 +17,10 @@
         Your Settings
     </p>
     <div class="col-lg-12 text-center" style="font-size:x-large">
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Username",  "ChangeUsername", "Profile")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Username", "ChangeUsername", "Profile")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Password", "ChangePassword", "Profile")</p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Allergies</p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Diets</p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Sorting Preference</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Set Allergies", "ChangeAllergies", "Profile")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Set Diets", "ChangeDiets", "Profile")</p>
     </div>
 </div>
 
@@ -31,7 +30,7 @@
     <p style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
         Recipes
     </p>
-    <div class="col-lg-12 text-center" style="font-size:x-large; padding-bottom:84px">
+    <div class="col-lg-12 text-center" style="font-size:x-large;">
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("View All Recipes", "Index", "Recipe")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Create New Recipe", "Create", "Recipe")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("View Bookmarks", "Index", "Bookmark")</p>
