Choosing diets limits what appears on the recipe index

--- a/CookingCurator/Views/Profile/ChangeDiets.cshtml
+++ b/CookingCurator/Views/Profile/ChangeDiets.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Change Diets</h2>
 
-<p>Choose diets you follow and you will only see recipes that fit your selected diets in our application!</p>
+<p>Choose diets you follow and you will only see recipes that fit your selected diets on the recipe listing page!</p>
 <p>You can select multiple diets.</p>
 
 @using (Html.BeginForm())
