--- a/CookingCurator/Views/Search/Search.cshtml
+++ b/CookingCurator/Views/Search/Search.cshtml
@@ -13,6 +13,7 @@
     
 <div class="form-horizontal">
     <h4>By Title or Ingredients</h4>
+    <p>Note: When searching by ingredients, use a comma (",") to seperate ingredients</p>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -21,20 +22,17 @@
             @Html.EditorFor(model => model.searchString, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.searchString, "", new { @class = "text-danger" })
         </div>
-    </div>
+        <label class="col-md-2 control-label">
+            <p>Search By @Html.DropDownListFor(m => m.searchSelection, Model.list)</p>
+        </label>
+        </div>
 
-    <p>Note: When searching by ingredients, use a comma (",") to seperate ingredients</p>
-
-    <p>@ViewBag.NoText</p>
-
-    @Html.DropDownListFor(m => m.searchSelection, Model.list)
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Search" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Search" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
