--- a/CookingCurator/Views/Recipe/CreateVerified.cshtml
+++ b/CookingCurator/Views/Recipe/CreateVerified.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CookingCurator.EntityModels.RecipeVerifiedAddViewModel
-
+<script src="//cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
 @{
     ViewBag.Title = "Create Verified Recipe";
 }
@@ -30,7 +30,7 @@
             @Html.ValidationMessageFor(model => model.instructions, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    <script>CKEDITOR.replace('instructions', { startupFocus: true });</script>
     <div class="form-group">
         @Html.LabelFor(model => model.author, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
