--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -30,6 +30,14 @@
         <td>Bootstrap</td>
         <td>https://getbootstrap.com/</td>
     </tr>
+    <tr>
+        <td>CKEditor</td>
+        <td>https://getbootstrap.com/</td>
+    </tr>
+    <tr>
+        <td>Peter McIntyre</td>
+        <td>https://petermcintyre.com/</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
