--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -32,7 +32,7 @@
 
 <h3>Searching a recipe</h3>
 
-<p>Someone can search recipes by clicking on "Search Recieps" in header</p>
+<p>Someone can search recipes by clicking on "Search Recipes" in header</p>
 
 <p>You can search by Ingredients or Title</p>
 
@@ -48,7 +48,7 @@
 
 <h3>Rating Recipe</h3>
 
-<p>Users can only rate a recipe once by selecting "Thumbs up or Thumbps down" in Recipe Detail.</p>
+<p>Users can only rate a recipe once by selecting "Thumbs up or Thumbs down" in Recipe Detail.</p>
 
 <p>Users can rate recipes with thumbs up or down.</p>
 
@@ -65,14 +65,14 @@
 
 <h2>FAQ</h2>
 
-<h3>Why Can't I create a verified recipe?</h3>
+<h3>Why can't I create a verified recipe?</h3>
 
-<p>Only admin can create verified recipes</p>
+<p>Only admin can create verified recipes.</p>
 
 <h3>How do I change Password?</h3>
 
-<p>Go to "UserDashboard" and click on Change Password.</p>
+<p>Go to the "UserDashboard" and click on Change Password.</p>
 
 <h3>How do I change Username?</h3>
 
-<p>Go to "UserDashboard" and click on Change Username.</p>
+<p>Go to the "UserDashboard" and click on Change Username.</p>
