Allergies now effect recipe index page

--- a/CookingCurator/Views/Profile/ChangeAllergies.cshtml
+++ b/CookingCurator/Views/Profile/ChangeAllergies.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Change Allergies</h2>
 
-<p>Choose allergies you have!</p>
+<p>Choose allergies you have!  This will prevent recipes containing ingredients that would trigger those allergies from appearing on the recipe index page.</p>
 <p>You can select multiple allergies.</p>
 
 @using (Html.BeginForm())
