--- a/CookingCurator/Views/Profile/DeleteAccount.cshtml
+++ b/CookingCurator/Views/Profile/DeleteAccount.cshtml
@@ -40,5 +40,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to User Dashboard", "UserDashboard")
 </div>
