--- a/CookingCurator/Views/Profile/ContactUs.cshtml
+++ b/CookingCurator/Views/Profile/ContactUs.cshtml
@@ -40,7 +40,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to User Dashboard", "UserDashboard")
 </div>
 
 @section Scripts {
