Ingredient restrictions added

--- a/CookingCurator/Views/Profile/UserDashboard.cshtml
+++ b/CookingCurator/Views/Profile/UserDashboard.cshtml
@@ -22,6 +22,7 @@
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Password", "ChangePassword", "Profile")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Set Allergies", "ChangeAllergies", "Profile")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Set Diets", "ChangeDiets", "Profile")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Set Restrictions", "ChangeRestrictions", "Profile")</p>
     </div>
 </div>
 
