--- a/CookingCurator/Views/Bookmark/Index.cshtml
+++ b/CookingCurator/Views/Bookmark/Index.cshtml
@@ -27,6 +27,18 @@
             @Html.DisplayFor(modelItem => item.Recipe.title)
         </td>
         <td>
+            @if (item.Recipe.rating > 0)
+            {
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+            }
+            else if (item.Recipe.rating < 0)
+            {
+                <span class="glyphicon glyphicon-thumbs-down"></span>
+            }
+            else
+            {
+                <span class="glyphicon glyphicon-hand-right"></span>
+            }
             @Html.DisplayFor(modelItem => item.Recipe.rating)
         </td>
         <td>
