--- a/CookingCurator/Views/User/Details.cshtml
+++ b/CookingCurator/Views/User/Details.cshtml
@@ -14,9 +14,8 @@
 </p>
 
 <hr />
-@Html.ActionLink("Click here to search for a different user", "Search", null, new { @class = "btn btn-default" })
-
+@Html.ActionLink("Click here to search for recipes.", "Search", "Search", null, new { @class = "btn btn-default" })
 <hr />
 
-@Html.ActionLink("Click here to see this user's recipes.", "Contact", "Home", null, new { @class = "btn btn-default" })
+@Html.ActionLink("Click here to report this user.", "ContactUs", "Profile", null, new { @class = "btn btn-default" })
 <p>Abuse of the report system will result in a permanent ban.</p>
