--- a/CookingCurator/Views/Home/Forgot.cshtml
+++ b/CookingCurator/Views/Home/Forgot.cshtml
@@ -1,6 +1,8 @@
 ﻿@model CookingCurator.EntityModels.RecoverViewModel
 
 @{
+    /**/
+
     ViewBag.Title = "Forgot Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,28 +11,34 @@
 
 <p>Please enter your email address used to create your Cooking Curator account.</p>
 <p>An email will be sent to the address, with the Username and a link to reset the password.</p>
+@if (!String.IsNullOrEmpty(ViewBag.success))
+{
+    <div class="alert alert-success">
+        <b>Success!</b> @ViewBag.success
+    </div>
+}
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.userEmail, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.userEmail, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.userEmail, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.userEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.userEmail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.userEmail, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Send" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Send" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
