--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -15,10 +15,24 @@
     @if (!String.IsNullOrEmpty(error))
     {
         <div class="alert alert-danger"><span>@ViewBag.error</span></div>
-            
+
     }
-            <hr />
-    </header>
+    @if (ViewBag.bookmark == "0")
+    {
+        <div class="alert alert-success">
+            <p> <b>Success!</b> This recipe has been bookmarked successfully</p>
+            <p> Click here to view all @Html.ActionLink("Recipes", "Index", "Recipe") </p>
+        </div>
+    }
+    else if(ViewBag.bookmark == "1")
+    {
+        <div class="alert alert-danger">
+            <p> <b>Error!</b> This recipe is already bookmarked. All bookmarked recipe can be viewed from Dashboard page.</p>
+            <p> Click here to view all your @Html.ActionLink("Bookmarks", "Index", "Bookmark") </p>
+        </div>
+    }
+    <hr />
+</header>
 
 <section>
     <dl class="dl-horizontal">
