--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -51,7 +51,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.author, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.author, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.author, new { htmlAttributes = new { @class = "form-control", @readOnly = "readOnly" } })
             @Html.ValidationMessageFor(model => model.author, "", new { @class = "text-danger" })
         </div>
     </div>
