--- a/CookingCurator/Views/User/Index.cshtml
+++ b/CookingCurator/Views/User/Index.cshtml
@@ -28,29 +28,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model)
-{
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.user_ID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.userName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.userEmail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.banUser)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email_Verified)
-        </td>
-        <td>
-            @Html.ActionLink("Ban User", "BanUser", new { id = item.user_ID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.user_ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.user_ID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.userName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.userEmail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.banUser)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email_Verified)
+            </td>
+            <td>
+                @Html.ActionLink("Ban User", "BanUser", new { id = item.user_ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.user_ID })
+            </td>
+        </tr>
+    }
 
 </table>
+
+@Html.ActionLink("Admin Dashboard", "Dashboard", "Profile", null,null)
