--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -38,6 +38,10 @@
         <td>Peter McIntyre</td>
         <td>https://petermcintyre.com/</td>
     </tr>
+    <tr>
+        <td>Tailor Brands</td>
+        <td>https://www.tailorbrands.com/</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
