--- a/CookingCurator/Views/Home/Index.cshtml
+++ b/CookingCurator/Views/Home/Index.cshtml
@@ -74,7 +74,15 @@ else
 
 
     </div>
-    <footer>
-        <p class="center-block">SHA-1: 7b32e399c057858c97a91a7ddeb2396bfc948ed6, Deployed Date: 3/10/2019</p>
-    </footer>
+    <div class="row">
+        <div class="col-md-4" style="width:33.33%;">
+            <img src="~/Content/Images/avocado.jpg" style="width:100%; height:50%"/>
+        </div>
+        <div class="col-md-4" style="width:33.33%" >
+            <img src="~/Content/Images/winter-salad.jpg" style="width:100%; height:50%"/>
+        </div>
+        <div class="col-md-4" style="width:33.33%">
+            <img src="~/Content/Images/herbs.jpg"style="width:100%; height:50%" />
+        </div>
+    </div>
 }
