--- a/CookingCurator/Views/Shared/_Layout.cshtml
+++ b/CookingCurator/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Cooking Curator</p>
+            <p>&copy; @DateTime.Now.Year - Cooking Curator, SHA-1: 7b32e399c057858c97a91a7ddeb2396bfc948ed6, Deployed Date: 3/10/2019</p>
         </footer>
     </div>
 
