--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -39,8 +39,13 @@
         <td>https://petermcintyre.com/</td>
     </tr>
     <tr>
+        https://www.shutterstock.com/
         <td>Tailor Brands</td>
         <td>https://www.tailorbrands.com/</td>
+    </tr>
+    <tr>
+        <td>Shutter Stock</td>
+        <td>https://www.shutterstock.com/</td>
     </tr>
 </table>
 
