Updated references to have descriptions

--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -13,38 +13,47 @@
     <tr>
         <th>Title</th>
         <th>Link</th>
+        <th>Why We Used It</th>
     </tr>
     <tr>
-        <td>Git</td>
+        <td>Git/Github</td>
         <td>https://git-scm.com/</td>
+        <td>To host our code and collaborate</td>
     </tr>
     <tr>
         <td>Visual Studio 2017</td>
         <td>https://visualstudio.microsoft.com/downloads/</td>
+        <td>Used to build and debug our program</td>
     </tr>
     <tr>
         <td>MySql Connector</td>
         <td>https://dev.mysql.com/downloads/connector/net/</td>
+        <td>Used to connect to our MySql Server</td>
     </tr>
     <tr>
         <td>Bootstrap</td>
         <td>https://getbootstrap.com/</td>
+        <td>Used to provide a front end framework for our application</td>
     </tr>
     <tr>
         <td>CKEditor</td>
-        <td>https://getbootstrap.com/</td>
+        <td>https://ckeditor.com/</td>
+        <td>Used to provide a rich text editing experience for users</td>
     </tr>
     <tr>
         <td>Peter McIntyre</td>
         <td>https://petermcintyre.com/</td>
+        <td>Used for code snippets and general help with C#/ASP.NET</td>
     </tr>
     <tr>
         <td>Tailor Brands</td>
         <td>https://www.tailorbrands.com/</td>
+        <td>Used to create our logo</td>
     </tr>
     <tr>
         <td>Shutter Stock</td>
         <td>https://www.shutterstock.com/</td>
+        <td>Used for our stock images</td>
     </tr>
 </table>
 
