--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -43,7 +43,7 @@
     <tr>
         <td>Peter McIntyre</td>
         <td>https://petermcintyre.com/</td>
-        <td>Used for code snippets and general help with C#/ASP.NET</td>
+        <td>Used for reference and general help with C#/ASP.NET</td>
     </tr>
     <tr>
         <td>Tailor Brands</td>
@@ -54,6 +54,11 @@
         <td>Shutter Stock</td>
         <td>https://www.shutterstock.com/</td>
         <td>Used for our stock images</td>
+    </tr>
+    <tr>
+        <td>Stack Overflow</td>
+        <td>https://stackoverflow.com/</td>
+        <td>Used for help with C#/ASP.NET</td>
     </tr>
 </table>
 
