--- a/CookingCurator/Views/Shared/_Layout.cshtml
+++ b/CookingCurator/Views/Shared/_Layout.cshtml
@@ -31,12 +31,14 @@
                         @if (this.User.IsInRole("Admin"))
                         {
                             <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Profile")</li>
-                            <li>@Html.ActionLink("User Index", "Index", "User")</li>
                         }
                         <li>@Html.ActionLink("Recipe Listing", "Index", "Recipe")</li>
-                        <li>@Html.ActionLink("Search Recipes", "Search", "Search")</li>
-                        <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
-                    </ul>
+                        @if (!this.User.IsInRole("Admin"))
+                        {
+                            <li>@Html.ActionLink("Search Recipes", "Search", "Search")</li>
+                        }
+                            <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
+                        </ul>
                 </div>
             }
             else
