--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -60,6 +60,16 @@
         <td>https://stackoverflow.com/</td>
         <td>Used for help with C#/ASP.NET</td>
     </tr>
+    <tr>
+        <td>ASP.net MVC</td>
+        <td>https://docs.microsoft.com/en-us/aspnet/mvc/overview/getting-started/getting-started-with-ef-using-mvc/sorting-filtering-and-paging-with-the-entity-framework-in-an-asp-net-mvc-application</td>
+        <td>User for reference to do sorting, searching and pagination</td>
+    </tr>
+    <tr>
+        <td>Chosen JQuery for multiselecting</td>
+        <td>https://harvesthq.github.io/chosen/</td>
+        <td>Used for help to select diets, allergies and ingredients</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
