--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -83,7 +83,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.mealTimeType, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.mealTimeType, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.mealTimeType, new { htmlAttributes = new { @class = "form-control", @placeholder = "/ ; * Not Allowed" } })
             @Html.ValidationMessageFor(model => model.mealTimeType, "", new { @class = "text-danger" })
         </div>
     </div>
