--- a/CookingCurator/Views/Recipe/CreateVerified.cshtml
+++ b/CookingCurator/Views/Recipe/CreateVerified.cshtml
@@ -18,7 +18,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", @placeholder = "/ ; * Not Allowed" } } })
+            @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", @placeholder = "/ ; * Not Allowed" } })
             @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
         </div>
     </div>
